
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
__attribute__((used)) static inline float clamp(float x, float min, float max)
{
 if (x < min)
  return min;
 else if (x > max)
  return max;
 return x;
}
